# dot_product_avx2_example

./: CMakeLists.txt  readme.md
cmake/: GoogleBenchmark.cmake
dot_product/: CMakeLists.txt  avx_dot4_bench.cpp  avx_dot8_bench.cpp  avx_dot_err.cpp  dot_bench.cpp
dot_product/include/dot_product/: attributes.hpp  avx_dot4.hpp  avx_dot8.hpp  dot.hpp
